--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser-dynamic": "12.1.3",
     "@angular/router": "12.1.3",
     "rxjs": "7.2.0",
+    "search-mat-select": "^0.1.3",
     "tslib": "2.3.0",
     "zone.js": "0.11.4"
   },
